Final implementation of API
